Add metadata to the start build page

--- a/config/ui/controllers.yaml
+++ b/config/ui/controllers.yaml
@@ -510,6 +510,7 @@ services:
             - '@doctrine.em'
             - '@build.start.validator'
             - '@release.start.validator'
+            - '@meta.validator'
             - '@sticky.environment'
             - '@uri'
 
