--- a/config/ui/services.yaml
+++ b/config/ui/services.yaml
@@ -68,6 +68,9 @@ services:
     target.script.validator:
         class: 'Hal\UI\Validator\Targets\ScriptValidator'
 
+    meta.validator:
+        class: 'Hal\UI\Validator\MetaValidator'
+
     ####################################################################################################################
 
     template.validator:
