Add metadata to the start deploy page

--- a/config/ui/controllers.yaml
+++ b/config/ui/controllers.yaml
@@ -550,6 +550,7 @@ services:
         arguments:
             - '@doctrine.em'
             - '@release.start.validator'
+            - '@meta.validator'
             - '@sticky.environment'
             - '@uri'
 
