Get working ldap sign ins

--- a/config/ui/controllers.yaml
+++ b/config/ui/controllers.yaml
@@ -39,6 +39,7 @@ services:
         arguments:
             - '@signin.twig'
             - '@doctrine.em'
+            - '@cookie.handler'
             - '@uri'
     signin.twig:
         parent: 'twig.template'
